# nitk-workshop

./: .gitignore  README.md  cdse.ipynb  imd_aoi_pipeline.py  main.py  pyproject.toml
data/aoi/: aoi.geojson
